csrc/tests/codegen_probes/errors/err_dim_at_multi.bas
' REJECT: DIM list + AT must declare one variable at a time.
' zxbparser p_var_decl_at:663 "Only one variable at a time can be declared this way".
Dim a, b As Byte At 16384
